--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,23 @@
   --dark-accent: #191a23;
   --dark-accent-hover: #393b4d;
   --green-accent-hover: #cbff8b;
+  --swiper-pagination-color: red;
+  --swiper-pagination-bullet: blue;
+}
+
+.swiper-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  transition-property: transform;
+  transition-timing-function: var(
+    --swiper-wrapper-transition-timing-function,
+    initial
+  );
+  box-sizing: content-box;
+  align-items: center;
 }
 
 @layer base {
