--- a/src/index.css
+++ b/src/index.css
@@ -58,4 +58,30 @@
   #root {
     @apply flex min-h-full flex-col overflow-x-hidden;
   }
+
+  @media (min-width: 1024px) {
+    .storyCard:nth-of-type(1),
+    .storyCard:nth-of-type(4) {
+      @apply border-b-0 border-l-0 border-r-2;
+    }
+
+    .storyCard:nth-of-type(2),
+    .storyCard:nth-of-type(5) {
+      @apply border-b-0 border-l-0 border-r-2;
+    }
+
+    .storyCard:nth-of-type(3),
+    .storyCard:nth-of-type(6) {
+      @apply border-l-0 border-r-0;
+    }
+
+    .storyCard:nth-of-type(6) {
+      @apply border-b-0;
+    }
+    .storyCard:nth-of-type(1),
+    .storyCard:nth-of-type(2),
+    .storyCard:nth-of-type(3) {
+      @apply border-b-2;
+    }
+  }
 }
